laptop viwe done

--- a/index.html
+++ b/index.html
@@ -36,11 +36,273 @@
     </header>
     <!-- main section -->
     <main>
+        <section class="first">
+
+            <div class="influncer">
+                <h1>Start your journey as influncer</h1>
+                <p>An influnceris an individual who has the power to affect purches decisions of others because of his or her authority.So, starting journey as an influncer is a good think. You can affectred others to do good things.</p>
+                <button>Prebook Now <i class="fas fa-long-arrow-alt-right"></i></button>
+
+            </div>
+            <div class="camera">
+                <img src="images/main-camera.png" alt="camera">
+            </div>
+        </section>
+
+        <section class="second"> 
+           <div class="logo"><img src="logos/Alibaba.svg" alt="alibaba"></div>
+           <div class="logo"><img src="logos/Ebay.svg" alt="Ebay"></div>
+           <div class="logo"><img src="logos/Rakuten.svg" alt="Rakuten"></div>
+           <div class="logo"><img src="logos/Amazon.svg" alt="Amazon"></div>
+           <div class="logo"><img src="logos/Daraz.pk Logo.svg" alt="daraz"></div>
+           <div class="logo"><img src="logos/Target.svg" alt="target"></div>
+           <div class="logo"><img src="logos/Walmart.svg" alt="Walmart"></div>
+
+        </section>
+
+        <section class="third">
+            <div class="title">
+                <h2>Popular Collection</h2>
+            </div>
+                <div class="collections">
+                    <div class="collection">
+                        <div class="image">
+                            <img src="images/action.png" alt="action">
+                        </div>
+                        <div class="description">
+                            <h2>Action Camera</h2>
+                            <p>$400.00</p>
+                            <div class="star">
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star unfilled"></i>
+                                <span class="rating">4</span>
+                            </div>
+                            <span class="info">
+                                worldwide shifting <br>
+                                available <br>
+                                Buyers Protections possible!
+                            </span>
+                        </div>
+                    </div>
+                    <div class="collection">
+                        <div class="image">
+                            <img src="images/airpod.png" alt="airpod">
+                        </div>
+                        <div class="description">
+                            <h2>Airpod</h2>
+                            <p>$400.00</p>
+                            <div class="star">
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star unfilled"></i>
+                                <span class="rating">4</span>
+                            </div>
+                            <span class="info">
+                                worldwide shifting <br>
+                                available <br>
+                                Buyers Protections possible!
+                            </span>
+                        </div>
+                    </div>
+                    <div class="collection">
+                        <div class="image">
+                            <img src="images/camera.png" alt="camera">
+                        </div>
+                        <div class="description">
+                            <h2>Camera</h2>
+                            <p>$400.00</p>
+                            <div class="star">
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star unfilled"></i>
+                                <span class="rating">4</span>
+                            </div>
+                            <span class="info">
+                                worldwide shifting <br>
+                                available <br>
+                                Buyers Protections possible!
+                            </span>
+                        </div>
+                    </div>
+                    <div class="collection">
+                        <div class="image">
+                            <img src="images/drone.png" alt="drone">
+                        </div>
+                        <div class="description">
+                            <h2>Drone</h2>
+                            <p>$400.00</p>
+                            <div class="star">
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star unfilled"></i>
+                                <span class="rating">4</span>
+                            </div>
+                            <span class="info">
+                                worldwide shifting <br>
+                                available <br>
+                                Buyers Protections possible!
+                            </span>
+                        </div>
+                    </div>
+                    <div class="collection">
+                        <div class="image">
+                            <img src="images/gear.png" alt="gear">
+                        </div>
+                        <div class="description">
+                            <h2>Gear</h2>
+                            <p>$400.00</p>
+                            <div class="star">
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star unfilled"></i>
+                                <span class="rating">4</span>
+                            </div>
+                            <span class="info">
+                                worldwide shifting <br>
+                                available <br>
+                                Buyers Protections possible!
+                            </span>
+                        </div>
+                    </div>
+                    <div class="collection">
+                        <div class="image">
+                            <img src="images/lights.png" alt="lights">
+                        </div>
+                        <div class="description">
+                            <h2>Lights</h2>
+                            <p>$400.00</p>
+                            <div class="star">
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star unfilled"></i>
+                                <span class="rating">4</span>
+                            </div>
+                            <span class="info">
+                                worldwide shifting <br>
+                                available <br>
+                                Buyers Protections possible!
+                            </span>
+                        </div>
+                    </div>
+                    <div class="collection">
+                        <div class="image">
+                            <img src="images/setup.png" alt="setup">
+                        </div>
+                        <div class="description">
+                            <h2>Setup</h2>
+                            <p>$400.00</p>
+                            <div class="star">
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star unfilled"></i>
+                                <span class="rating">4</span>
+                            </div>
+                            <span class="info">
+                                worldwide shifting <br>
+                                available <br>
+                                Buyers Protections possible!
+                            </span>
+                        </div>
+                    </div>
+                    <div class="collection">
+                        <div class="image">
+                            <img src="images/single-light.png" alt="single light">
+                        </div>
+                        <div class="description">
+                            <h2>Single Light</h2>
+                            <p>$400.00</p>
+                            <div class="star">
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star unfilled"></i>
+                                <span class="rating">4</span>
+                            </div>
+                            <span class="info">
+                                worldwide shifting <br>
+                                available <br>
+                                Buyers Protections possible!
+                            </span>
+                        </div>
+                    </div>
+                    <div class="collection">
+                        <div class="image">
+                            <img src="images/tripod.png" alt="tripod">
+                        </div>
+                        <div class="description">
+                            <h2>tripod</h2>
+                            <p>$400.00</p>
+                            <div class="star">
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star unfilled"></i>
+                                <span class="rating">4</span>
+                            </div>
+                            <span class="info">
+                                worldwide shifting <br>
+                                available <br>
+                                Buyers Protections possible!
+                            </span>
+                        </div>
+                    </div>
+                </div>
+                <div class="see">
+                    <p>see more <i class="fas fa-long-arrow-alt-right"></i></p>
+                </div>
+
+        </section>
+
+        <section class="four">
+            <div class="tech_pic">
+                <img src="images/technology.jpg" alt="technology">
+
+            </div>
+            <div class="details">
+                <h2>
+                    Technology Solution from us
+                </h2>
+                <p>
+                    Here we provide techonology Solution.You can get help of any technology related problem from here.
+                </p>
+                <button>click here <i class="fas fa-long-arrow-alt-right"></i></button>
+
+            </div>
+
+        </section>
 
     </main>
 
     <!-- footer section -->
     <footer>
+        <div class="last">
+            <h4>Influencer Products</h4>
+            <p>copyright <i class="far fa-copyright"></i> 2020 influncer products </p>
+            <p>All rights reserved</p>
+            <div class="Socialinks">
+                <div class="slink"><a target="_blank" href="https://wwww.facebook.com"><img src="socialmedia/facebook.png" alt="facebook"></a></div>
+                <div class="slink"><a target="_blank"href="https://wwww.instagram.com"><img src="socialmedia/instagram.png" alt="instagram"></a></div>
+                <div class="slink"><a target="_blank" href="https://wwww.twiter.com"><img src="socialmedia/twiter.png" alt="twiter"></a></div>
+                <div class="slink"><a target="_blank" href="https://wwww.youtube.com"><img src="socialmedia/youtube.png" alt="youtube"></a></div>
+            </div>
+        </div>
 
     </footer>
 </body>
